# mess-plus

./: .gitignore  .gitmodules  README.md  Untitled.ipynb  baseline_comparison.ipynb  class_reweighting.ipynb  classifier_pipeline.ipynb  data_preprocessing.ipynb  dataset_merger.ipynb  embedding_pipeline.ipynb  generation_pipeline.py  main.py  mess_plus.ipynb  mess_plus.py  mess_plus_simulator.ipynb  mess_plus_simulator.py  mess_plus_simulator_c_0.py  modern_bert_pipeline.py  multi_head_classification.ipynb  multi_head_classifier.ipynb  multi_label_classification.ipynb  multi_label_training.ipynb  output_similarity_analysis.ipynb  preprocess.ipynb  pyproject.toml  q_length_estimation.ipynb  requirements.txt  run_baselines.ipynb  simple_neural_net.ipynb  simulation_data.ipynb  simulator.py  test.ipynb  tokenization.ipynb  tokenization.py  tokenizatiton.py
.ipynb_checkpoints/: multi_head_classification-checkpoint.ipynb  multi_label_classification-checkpoint.ipynb  simple_neural_net-checkpoint.ipynb  simulation_data-checkpoint.ipynb
algorithm/: __init__.py  exploitation.py  exploration.py  update_q.py
classifier/: dataset.py  file_reader.py  model.py  sweep_config.yaml  sweeper.py  train_classifier.ipynb  trainer.py
classifier/score_estimation/: __init__.py
classifier/utils/: __init__.py  data_management.py  experimentation.py  lit_trainer.py  loss_fn.py  metrics.py  modelling_mess_plus_classifier.py
config/: arc_challenge.yaml  arc_easy.yaml  boolq.yaml  lambada_standard.yaml  logiqa.yaml  logiqa2.yaml  piqa.yaml  sciq.yaml  siqa.yaml  winogrande.yaml
config/classifier/: sweep_v1.yaml
config/classifier/boolq/: config.yaml  focal_loss_sweep.yaml
config/classifier/logiqa2/: architecture_sweep.yaml  config.yaml  focal_loss_sweep.yaml  hyperparameter_sweep.yaml
config/classifier/mmlu/: config.yaml
config/example/: arc_challenge.yaml
config/llama3/: arc_challenge.yaml  arc_easy.yaml  boolq.yaml  logiqa.yaml  piqa.yaml  sciq.yaml  social_iqa.yaml  winogrande.yaml
config/llama3/online/: arc_challenge.yaml  arc_easy.yaml  boolq.yaml  lambada_standard.yaml  logiqa.yaml  logiqa2.yaml  (+6 more)
config/messplus/: arc_challenge.yaml  arc_easy.yaml  baseline.yaml  boolq.yaml  boolq_baseline.yaml  lambada_standard.yaml  logiqa.yaml  mmlu.yaml  piqa.yaml  sciq.yaml  siqa.yaml  triviaqa.yaml  winogrande.yaml
config/mixed_l3_q2/: arc_challenge.yaml  arc_easy.yaml  boolq.yaml  logiqa.yaml  piqa.yaml  sciq.yaml  social_iqa.yaml  winogrande.yaml
config/online/: sciq.yaml  siqa.yaml  winogrande.yaml
config/pretrained/: arc_challenge.yaml  boolq.yaml  logiqa.yaml
config/qwen2/: arc_challenge.yaml  arc_easy.yaml  boolq.yaml  logiqa.yaml  piqa.yaml  sciq.yaml  social_iqa.yaml  winogrande.yaml
data_logs/: clean.ipynb  wmt14_bleu_threshold.csv  wmt14_outputs.csv
data_logs/.ipynb_checkpoints/: clean-checkpoint.ipynb
evaluations/: experiments.ipynb  experiments_api_provider.ipynb  experiments_llama3.ipynb  experiments_qwen2.ipynb
evaluations/utils/: tables.py  wandb_loader.py
jobs/: generate_simulation_data.sbatch  generate_simulation_data_llama_31_08b.sbatch  generate_simulation_data_llama_32_3b.sbatch  generate_simulation_data_llama_33_70b.sbatch  generate_simulation_data_llama_all.sbatch  lm_eval_output_generator.sbatch  lm_eval_output_generator_llama405b.sbatch  lm_eval_output_generator_llama70b_v1.sbatch  lm_eval_output_generator_llama70b_v2.sbatch  lm_eval_output_generator_llama8b.sbatch  modern_bert_embedding_pipeline.sbatch  test.sbatch
jobs/classifier_best_model_training/: arc_challenge.sbatch  arc_easy.sbatch  boolq.sbatch  lambada_standard.sbatch  logiqa.sbatch  logiqa2.sbatch  mmlu.sbatch  piqa.sbatch  run_all.sh  sciq.sbatch  siqa.sbatch  triviaqa.sbatch  winogrande.sbatch
jobs/classifier_hp_sweep/: arc_challenge.sbatch  arc_easy.sbatch  boolq.sbatch  lambada_standard.sbatch  logiqa.sbatch  logiqa2.sbatch  mmlu.sbatch  piqa.sbatch  sciq.sbatch  siqa.sbatch  triviaqa.sbatch  winogrande.sbatch
jobs/classifier_training/: arc_challenge.sbatch  arc_easy.sbatch  boolq.sbatch  lambada_standard.sbatch  logiqa.sbatch  logiqa2.sbatch  mmlu.sbatch  piqa.sbatch  sciq.sbatch  siqa.sbatch  sweep_v1.sbatch  sweep_v2.sbatch  triviaqa.sbatch  winogrande.sbatch
jobs/classifier_training_dataset_gen/: arc_challenge.sbatch  arc_easy.sbatch  boolq.sbatch  lambada_standard.sbatch  logiqa.sbatch  logiqa2.sbatch  mmlu.sbatch  piqa.sbatch  run_all.sh  sciq.sbatch  siqa.sbatch  triviaqa.sbatch  winogrande.sbatch
jobs/classifier_training_dataset_generation/: arc_challenge.sbatch  arc_easy.sbatch  boolq.sbatch  lambada_standard.sbatch  logiqa.sbatch  logiqa2.sbatch  mmlu.sbatch  piqa.sbatch  sciq.sbatch  siqa.sbatch  triviaqa.sbatch  winogrande.sbatch
jobs/lm-eval/: llama_1b_3.2.sbatch  llama_3b_3.2.sbatch  llama_405b_3.1.sbatch  llama_405b_multi-node-native.sbatch  llama_70b_3.1.sbatch  llama_70b_3.3.sbatch  llama_8b_3.1.sbatch
jobs/model_loader/: load_llama_1b.sbatch  load_llama_3b.sbatch  load_llama_405b.sbatch  load_llama_70b_v1.sbatch  load_llama_70b_v2.sbatch  load_llama_8b.sbatch  load_qwen2_0.5b.sbatch  load_qwen2_1.5b.sbatch  load_qwen2_32b.sbatch  load_qwen2_7b.sbatch
jobs/simulation-data/: generate_simulation_data_llama_31_08b.sbatch  generate_simulation_data_llama_32_3b.sbatch  generate_simulation_data_llama_all.sbatch
legacy/: Algorithm.ipynb  classifier_pipeline.ipynb  embedding_pipeline.py  modern_bert_pipeline.py  multi_head_classifier.ipynb  output_similarity_analysis.ipynb
plots/: 00_introduction.ipynb
plots/utils/: latex_formatting.py  open_llm_leaderboard.py  plotting.py
results/checkpoint-500/: config.json  rng_state.pth  trainer_state.json
utils/: __init__.py  data_capturing.py  dataset_merger.ipynb  gpu_management.py  misc.py  modelling_messplus_classifier.py
utils/mess_lm_eval_harness/: vllm.py  vllm_v2.py
utils/mess_plus/: bernoulli_sampler.py
wandb/: latest-run
wandb/run-20241117_021831-riwmxrq2/: run-riwmxrq2.wandb
wandb/run-20241121_080916-nvuqlef7/: run-nvuqlef7.wandb
wandb/run-20241121_191507-24wfa2hn/: run-24wfa2hn.wandb
(+231 files in other folders)
