[project]
name = "mess-plus"
version = "1.0.0"
description = "This is the code base for the NeurIPS 2025 paper 'MESS+: Dynamically Learned Inference-Time LLM Routing in Model Zoos with Service Level Guarantees'."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "absl-py==2.1.0",
    "accelerate==1.2.1",
    "aiohappyeyeballs==2.4.4",
    "aiohttp==3.11.11",
    "aiosignal==1.3.2",
    "airportsdata==20241001",
    "annotated-types==0.7.0",
    "anyio==4.7.0",
    "argon2-cffi==23.1.0",
    "argon2-cffi-bindings==21.2.0",
    "arrow==1.3.0",
    "astor==0.8.1",
    "asttokens==3.0.0",
    "async-lru==2.0.4",
    "attrs==24.3.0",
    "babel==2.16.0",
    "beautifulsoup4==4.12.3",
    "bitsandbytes>=0.47.0 ; sys_platform != 'darwin'",
    "blake3==1.0.0",
    "bleach==6.2.0",
    "cachetools==5.5.2",
    "certifi==2024.12.14",
    "cffi==1.17.1",
    "chardet==5.2.0",
    "charset-normalizer==3.4.0",
    "click==8.1.7",
    "cloudpickle==3.1.0",
    "colorama==0.4.6",
    "comm==0.2.2",
    "compressed-tensors==0.9.3",
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "dataproperty==1.1.0",
    "datasets==3.2.0",
    "debugpy==1.8.11",
    "decorator==5.1.1",
    "defusedxml==0.7.1",
    "deprecated==1.2.18",
    "depyf==0.18.0",
    "dill==0.3.8",
    "diskcache==5.6.3",
    "distro==1.9.0",
    "dnspython==2.7.0",
    "docker-pycreds==0.4.0",
    "docstring-parser==0.16",
    "einops==0.8.0",
    "email-validator==2.2.0",
    "evaluate==0.4.3",
    "executing==2.1.0",
    "faiss-cpu==1.9.0.post1",
    "fastapi==0.115.6",
    "fastapi-cli==0.0.7",
    "fastjsonschema==2.21.1",
    "fastrlock==0.8.3",
    "filelock==3.16.1",
    "fonttools==4.55.3",
    "fqdn==1.5.1",
    "frozenlist==1.5.0",
    "fsspec==2024.9.0",
    "gguf==0.14.0",
    "gitdb==4.0.11",
    "gitpython==3.1.43",
    "googleapis-common-protos==1.70.0",
    "grpcio==1.71.0",
    "h11==0.14.0",
    "hf-xet==1.0.3",
    "httpcore==1.0.7",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "huggingface-hub==0.30.2",
    "idna==3.10",
    "importlib-metadata==8.0.0",
    "iniconfig==2.0.0",
    "interegular==0.3.3",
    "ipykernel==6.29.5",
    "ipython==8.30.0",
    "ipywidgets==8.1.5",
    "isoduration==20.11.0",
    "jedi==0.19.2",
    "jinja2==3.1.4",
    "jiter==0.8.2",
    "joblib==1.4.2",
    "json5==0.10.0",
    "jsonlines==4.0.0",
    "jsonpointer==3.0.0",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "jupyter==1.1.1",
    "jupyter-client==8.6.3",
    "jupyter-console==6.6.3",
    "jupyter-core==5.7.2",
    "jupyter-events==0.11.0",
    "jupyter-lsp==2.2.5",
    "jupyter-server==2.14.2",
    "jupyter-server-terminals==0.5.3",
    "jupyterlab==4.3.4",
    "jupyterlab-pygments==0.3.0",
    "jupyterlab-server==2.27.3",
    "jupyterlab-widgets==3.0.13",
    "kiwisolver==1.4.8",
    "lark==1.2.2",
    "lightning==2.5.0.post0",
    "lightning-utilities==0.11.9",
    "llguidance==0.7.14",
    "llvmlite==0.44.0",
    "lm-eval",
    "lm-format-enforcer==0.10.11",
    "lxml==5.3.0",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "matplotlib==3.10.0",
    "matplotlib-inline==0.1.7",
    "mbstrdecoder==1.1.4",
    "mdurl==0.1.2",
    "mistral-common==1.5.4",
    "mistune==3.0.2",
    "more-itertools==10.6.0",
    "mpmath==1.3.0",
    "msgpack==1.1.0",
    "msgspec==0.18.6",
    "multidict==6.1.0",
    "multiprocess==0.70.16",
    "nbclient==0.10.2",
    "nbconvert==7.16.4",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "networkx==3.4.2",
    "ninja==1.11.1.4",
    "nltk==3.9.1",
    "notebook==7.3.1",
    "notebook-shim==0.2.4",
    "numba==0.61.2",
    "numexpr==2.10.2",
    "numpy==1.26.4",
    "openai==1.58.1",
    "opencv-python-headless==4.11.0.86",
    "opentelemetry-api==1.26.0",
    "opentelemetry-exporter-otlp==1.26.0",
    "opentelemetry-exporter-otlp-proto-common==1.26.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.26.0",
    "opentelemetry-exporter-otlp-proto-http==1.26.0",
    "opentelemetry-proto==1.26.0",
    "opentelemetry-sdk==1.26.0",
    "opentelemetry-semantic-conventions==0.47b0",
    "opentelemetry-semantic-conventions-ai==0.4.3",
    "outlines==0.1.11",
    "outlines-core==0.1.26",
    "overrides==7.7.0",
    "packaging==24.2",
    "pandas==2.2.3",
    "pandocfilters==1.5.1",
    "parso==0.8.4",
    "partial-json-parser==0.2.1.1.post4",
    "pathvalidate==3.2.3",
    "peft==0.14.0",
    "pexpect==4.9.0",
    "pillow==10.4.0",
    "platformdirs==4.3.6",
    "pluggy==1.5.0",
    "portalocker==3.1.1",
    "prometheus-client==0.21.1",
    "prometheus-fastapi-instrumentator==7.0.0",
    "prompt-toolkit==3.0.48",
    "propcache==0.2.1",
    "protobuf==4.25.6",
    "psutil==6.1.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "py-cpuinfo==9.0.0",
    "pyarrow==18.1.0",
    "pybind11==2.13.6",
    "pycountry==24.6.1",
    "pycparser==2.22",
    "pydantic==2.10.4",
    "pydantic-core==2.27.2",
    "pygments==2.18.0",
    "pyparsing==3.2.1",
    "pyphen==0.17.0",
    "pytablewriter==1.2.1",
    "pytest==8.3.4",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "python-json-logger==3.2.1",
    "python-multipart==0.0.20",
    "pytorch-lightning==2.5.0.post0",
    "pytz==2024.2",
    "pyyaml==6.0.2",
    "pyzmq==26.2.0",
    "ray==2.43.0",
    "referencing==0.35.1",
    "regex==2024.11.6",
    "requests==2.32.3",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rich==13.9.4",
    "rich-toolkit==0.14.1",
    "rouge-score==0.1.2",
    "rpds-py==0.22.3",
    "sacrebleu==2.5.1",
    "safetensors==0.4.5",
    "scikit-learn==1.6.0",
    "scipy==1.14.1",
    "send2trash==1.8.3",
    "sentence-transformers==3.3.1",
    "sentencepiece==0.2.0",
    "sentry-sdk==2.19.2",
    "setproctitle==1.3.4",
    "setuptools==75.6.0",
    "shellingham==1.5.4",
    "shtab==1.7.1",
    "six==1.17.0",
    "smmap==5.0.1",
    "sniffio==1.3.1",
    "soupsieve==2.6",
    "sqlitedict==2.1.0",
    "stack-data==0.6.3",
    "starlette==0.41.3",
    "sympy==1.13.1",
    "tabledata==1.3.4",
    "tabulate==0.9.0",
    "tcolorpy==0.1.7",
    "terminado==0.18.1",
    "textstat==0.7.4",
    "threadpoolctl==3.5.0",
    "tiktoken==0.7.0",
    "tinycss2==1.4.0",
    "tokenizers==0.21.0",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "torchmetrics==1.6.1",
    "torchvision==0.21.0",
    "tornado==6.4.2",
    "tqdm==4.67.1",
    "tqdm-multiprocess==0.0.11",
    "traitlets==5.14.3",
    "transformers==4.51.3",
    "triton==3.2.0 ; sys_platform != 'darwin'",
    "typeguard==4.4.1",
    "typepy==1.3.4",
    "typer==0.15.2",
    "types-python-dateutil==2.9.0.20241206",
    "typing-extensions==4.12.2",
    "tyro==0.9.4",
    "tzdata==2024.2",
    "uri-template==1.3.0",
    "urllib3==2.2.3",
    "uvicorn==0.34.0",
    "uvloop==0.21.0",
    "vllm==0.8.4",
    "wandb==0.19.1",
    "watchfiles==1.0.3",
    "wcwidth==0.2.13",
    "webcolors==24.11.1",
    "webencodings==0.5.1",
    "websocket-client==1.8.0",
    "websockets==14.1",
    "widgetsnbextension==4.0.13",
    "word2number==1.1",
    "wrapt==1.17.2",
    "xformers>=0.0.29.post2 ; sys_platform != 'darwin'",
    "xgrammar==0.1.18",
    "xxhash==3.5.0",
    "yarl==1.18.3",
    "zeus-ml==0.10.1",
    "zipp==3.21.0",
    "zstandard==0.23.0",
]

[tool.uv.sources]
lm-eval = { git = "https://github.com/EleutherAI/lm-evaluation-harness", rev = "f724be699e8adf7ca8004ea0e519dfac83a06f18" }
